--- a/Tela_Fase_Intermediario.html
+++ b/Tela_Fase_Intermediario.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tela - Lógica de Programação</title>
+  <link rel="icon" href="/assets/favicon.ico">
   <!-- Link do Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/CSS/style_TelaFases.css">
