--- a/telaJogo.html
+++ b/telaJogo.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FunCode</title>
+  <link rel="icon" href="/assets/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/style_config.css">
@@ -74,7 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col my-5 p-0">
-          <a href="/index.html"><img src="assets/folter_inicio.png" alt=""></a>
+          <a href="/menu.html"><img src="assets/folter_inicio.png" alt=""></a>
         </div>
         <div class="col my-5 p-0">
           <img src="assets/folter_trof.png" alt="">
