--- a/Tela_Fase_Intermediario.html
+++ b/Tela_Fase_Intermediario.html
@@ -136,19 +136,22 @@
 
     <footer class="final fixed-bottom">
       
-      <div class="container">
-        <div class="row">
-          <div class="col my-5 p-0">
-            <a href="/index.html"><img src="assets/folter_inicio.png" alt=""></a>
+      <div class="container my-5">
+        <div class="row mx-auto ">
+          <div class="col ">
+            <a href="/menu.html"><img src="assets/folter_inicio.png" alt=""></a>
           </div>
-          <div class="col my-5 p-0">
-            <img src="assets/folter_trof.png" alt="">
+          <div class="col ">
+            <a href="/rank_de_Usuario.html"><img src="assets/folter_trof.png" alt=""></a>
           </div>
-          <div class="col my-5 p-0">
-            <a href="/telaCadastro.html"><img src="assets/profile 1.png" alt=""></a>
-          </div>
-          <div class="col my-5 p-0">
+          <div class="col ">
             <a href="TelaConfig.html"><img src="assets/conf.png" alt=""></a>
+          </div>
+          <div class="col ">
+            <a href="loja.html"><img src="assets/loja.png" alt=""></a>
+          </div>
+          <div class="col ">
+            <a href="index.html"><img src="assets/btn_sair.png" alt=""></a>
           </div>
         </div>
       </div>
