--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/assets/favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style_tela_login.css">
+  <link rel="stylesheet" href="css/style_tela_login.css">
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="login-container">
-    <img src="/assets/01 1.png" alt="Robo" class="robot-image">
+    <img src="assets/01 1.png" alt="Robo" class="robot-image">
     <form id="userForm">
 
       <!-- Input de E-mail -->
