--- a/telaJogo.html
+++ b/telaJogo.html
@@ -70,29 +70,14 @@
     </div>
   </div>
 
-  <footer class="final fixed-bottom">
-      
-    <div class="container">
-      <div class="row">
-        <div class="col my-5 p-0">
-          <a href="/menu.html"><img src="assets/folter_inicio.png" alt=""></a>
-        </div>
-        <div class="col my-5 p-0">
-          <img src="assets/folter_trof.png" alt="">
-        </div>
-        <div class="col my-5 p-0">
-          <a href="/telaCadastro.html"><img src="assets/profile 1.png" alt=""></a>
-        </div>
-        <div class="col my-5 p-0">
-          <a href="TelaConfig.html"><img src="assets/conf.png" alt=""></a>
-        </div>
-      </div>
-    </div>
 
-</footer>
+
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/js/tela_jogo.js"></script>
+  <script src="js/ranking.js"></script>
 </body>
 </html>
