--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FunCode</title>
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="icon" href="./assets/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous">
@@ -34,7 +34,7 @@
 
 
         <div class="d-flex">
-        <img src="/assets/robo_grande.png" class="col-2 i my-5 mx-auto perfil_1" alt="...">
+        <img src="./assets/robo_grande.png" class="col-2 i my-5 mx-auto perfil_1" alt="...">
         </div>
 
     
