feat(jogo, ranking): salvando e exibindo ranking

--- a/rank_de_Usuario.html
+++ b/rank_de_Usuario.html
@@ -58,7 +58,7 @@
     </thead>
     <tbody>
         <!-- Aqui você irá inserir os dados dos usuários -->
-        <tr class="table-active table-primary" >
+        <!-- <tr class="table-active table-primary" >
             <td >1</td>
             <td>Usuario1</td>
             <td>25</td>
@@ -75,7 +75,7 @@
             <td>Usuario3</td>
             <td>22</td>
             <td>5</td>
-        </tr>
+        </tr> -->
         <!-- Adicione mais usuários conforme necessário -->
     </tbody>
 </table>
@@ -107,5 +107,6 @@
 
 </footer>
 
+  <script src="./js/ranking.js"></script>
 </body>
 </html>
