--- a/telaJogo.html
+++ b/telaJogo.html
@@ -78,6 +78,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/tela_jogo.js"></script>
-  <script src="js/ranking.js"></script>
+  <!-- <script src="js/ranking.js"></script> -->
 </body>
 </html>
