tela iniciante ok

--- a/menu.html
+++ b/menu.html
@@ -160,7 +160,7 @@
     </footer>
 
     <!-- Vai servir para verificar se a pessoal tem uma sessão aberta de autentificação -->
-    <script>
+    <!-- <script>
       const usuarioNome = sessionStorage.getItem('usuario');
       if (usuarioNome) {
           document.getElementById('usuarioNome').textContent = usuarioNome;
@@ -168,7 +168,7 @@
           // Se não houver usuário na sessão, redireciona para login
           window.location.href = "index.html";
       }
-  </script>
+  </script> -->
 
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
