--- a/Tela_Fase_Iniciante.html
+++ b/Tela_Fase_Iniciante.html
@@ -57,7 +57,7 @@
           <!-- Seta & Configurações -->
           <div class="row align-items-center">
             <div class="col-auto m-3">
-              <a href="index.html">
+              <a href="menu.html">
                 <img src="./Assets/streamline_return-2-solid.png" alt="">
               </a>
             </div>
