--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link fs-2 fw-bold" href="#"><img src="assets/cerebro.png" alt=""> Módulo 1 - Lógica de Programação</a>
+                  <a class="nav-link fs-2 fw-bold" href="Tela_Fase_Iniciante.html"><img src="assets/cerebro.png" alt=""> Módulo 1 - Lógica de Programação</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link fs-2 fw-bold" href="#"><img src="assets/logos_python.png" alt=""> Módulo 2 - Python</a>
