--- a/TelaConfig.html
+++ b/TelaConfig.html
@@ -71,8 +71,7 @@
         <h2 class="text-white ms-4 m-2">Conta</h2>
 
         <!-- Preferencias -->
-        <div class="d-flex colunm bg-white m-3 col rounded-2 ">
-          <img src="./assets/" class="col-1 " alt="">
+        <div class="row bg-white m-3 col rounded-2 ">
           <a class="fs-4 text-decoration-none text-dark" href="">Preferencias</a>
         </div>
 
