--- a/menu.html
+++ b/menu.html
@@ -87,23 +87,23 @@
           </div>
 
            <div class="col m-0 p-0">
-            <a href="./telaJogo.html"><img src="assets/fase1.png" alt=""></a>
+            <a href="telaJogo.html"><img src="assets/fase1.png" alt=""></a>
           </div>
 
     
           <div class="col m-0 px-0">
-            <img src="assets/fase2.png" alt="">
+            <a href="telaJogo2.html"><img src="assets/fase2.png" alt=""></a>
           </div>
 
         <div class="row align-items-center linha2">
           <div class="col">
-            <img src="assets/fase3.png" alt="">
+            <a href="telaJogo3.html"><img src="assets/fase3.png" alt=""></a>
           </div>
 
 
 
           <div class="col m-0 py-5 ">
-            <img src="assets/fase4.png" alt="">
+            <a href="telaJogo4.html"><img src="assets/fase4.png" alt=""></a>
           </div>
 
 
