--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,10 @@
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navegacao">
@@ -53,7 +57,7 @@
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+              <h5 class="offcanvas-title fw-bold" id="offcanvasNavbarLabel">Menu</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -108,7 +112,7 @@
 
 
           <div class="col ps-3">
-            <img src="assets/fase5.png" alt="">
+            <a href="telaJogo5.html"><img src="assets/fase5.png" alt=""></a>
           </div>
 
         
@@ -122,12 +126,12 @@
 
 
           <div class="col">
-            <img src="assets/fase6.png" alt="">
+            <a href="telaJogo6.html"><img src="assets/fase6.png" alt=""></a>
           </div>
 
 
           <div class="col">
-            <img src="assets/fase7.png" alt="">
+            <a href="telaJogo7.html"><img src="assets/fase7.png" alt=""></a>
           </div>
 
       </main>
