--- a/telaJogo5.html
+++ b/telaJogo5.html
@@ -50,9 +50,9 @@
   <div class="container py-5 text-center">
     
     <div id="game-container" class=" border p-4 rounded" style="background-color: #69A5DB;">
-      <h3 id="question" class="mb-4 container bg-light rounded-3"></h3>
+      <h3 id="question" class="container bg-light col-11 mb-4 rounded-5"></h3>
       <div id="options" class="row">
-        <div class="mb-3"><img src="./assets/game1.png" alt=""></div>
+        <div class="mb-3"><img class="col-12" src="./assets/game5.png" alt=""></div>
         <div class="col-md-6 mb-3">
           <button class="btn btn-primary btn-block w-100 option" onclick="checkAnswer(0)">Opção A</button>
         </div>
@@ -96,7 +96,7 @@
 
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/tela_jogo.js"></script>
+  <script src="./js/tela_jogo5.js"></script>
   <!-- <script src="js/ranking.js"></script> -->
 </body>
 </html>
