--- a/telaJogo2.html
+++ b/telaJogo2.html
@@ -52,7 +52,7 @@
     <div id="game-container" class=" border p-4 rounded" style="background-color: #69A5DB;">
       <h3 id="question" class="container bg-light col-8 mb-4 rounded-5"></h3>
       <div id="options" class="row">
-        <div class="mb-3"><img src="./assets/game2.png" alt=""></div>
+        <div class="mb-3"><img class="col-12" src="./assets/game2.png" alt=""></div>
         <div class="col-md-6 mb-3">
           <button class="btn btn-primary btn-block w-100 option" onclick="checkAnswer(0)">Opção A</button>
         </div>
