explicacoes das perguntas criadas em Modal
Concluido

--- a/telaJogo4.html
+++ b/telaJogo4.html
@@ -68,6 +68,16 @@
       </div>
       
     </div>
+
+        
+            <!-- Modal -->
+            <div id="resultModal" class="modal">
+              <div class="modal-content">
+                <span id="closeModalBtn" class="close">&times;</span>
+                <h2 id="modalMessage"></h2>
+                <div id="modalButtonContainer"></div>
+              </div>
+            </div>
   </div>
 
   <footer class="final">
