--- a/menu.html
+++ b/menu.html
@@ -91,28 +91,28 @@
           </div>
 
            <div class="col m-0 p-0">
-            <a href="telaJogo.html"><img src="assets/fase1.png" alt=""></a>
+            <a href="telaJogo.html"><img id="fase1" src="assets/fase1.png" alt=""></a>
           </div>
 
     
           <div class="col m-0 px-0">
-            <a href="telaJogo2.html"><img src="assets/fase2.png" alt=""></a>
+            <a href="telaJogo2.html"><img id="fase2" src="assets/fase2.png" alt=""></a>
           </div>
 
         <div class="row align-items-center linha2">
           <div class="col">
-            <a href="telaJogo3.html"><img src="assets/fase3.png" alt=""></a>
+            <a href="telaJogo3.html"><img id="fase3" src="assets/fase3.png" alt=""></a>
           </div>
 
 
 
           <div class="col m-0 py-5 ">
-            <a href="telaJogo4.html"><img src="assets/fase4.png" alt=""></a>
+            <a href="telaJogo4.html"><img id="fase4" src="assets/fase4.png" alt=""></a>
           </div>
 
 
           <div class="col ps-3">
-            <a href="telaJogo5.html"><img src="assets/fase5.png" alt=""></a>
+            <a href="telaJogo5.html"><img id="fase5" src="assets/fase5.png" alt=""></a>
           </div>
 
         
@@ -126,12 +126,12 @@
 
 
           <div class="col">
-            <a href="telaJogo6.html"><img src="assets/fase6.png" alt=""></a>
+            <a href="telaJogo6.html"><img id="fase6" src="assets/fase6.png" alt=""></a>
           </div>
 
 
           <div class="col">
-            <a href="telaJogo7.html"><img src="assets/fase7.png" alt=""></a>
+            <a href="telaJogo7.html"><img id="fase7" src="assets/fase7.png" alt=""></a>
           </div>
 
       </main>
@@ -164,7 +164,7 @@
     </footer>
 
     <!-- Vai servir para verificar se a pessoal tem uma sessão aberta de autentificação -->
-    <!-- <script>
+    <script>
       const usuarioNome = sessionStorage.getItem('usuario');
       if (usuarioNome) {
           document.getElementById('usuarioNome').textContent = usuarioNome;
@@ -172,7 +172,7 @@
           // Se não houver usuário na sessão, redireciona para login
           window.location.href = "index.html";
       }
-  </script> -->
+  </script>
 
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
