--- a/rank_de_Usuario.html
+++ b/rank_de_Usuario.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style_config.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav class="navbar navegacao mb-5">
@@ -44,7 +48,7 @@
 
  
 <main class="container">    
-<div class="bg-primary p-5">
+<div class="p-5" style="background-color: #69A5DB">
 <h2>Ranking de Usuários</h2>
 </div>
 <table class="table table-striped" >
