--- a/telaJogo.html
+++ b/telaJogo.html
@@ -68,9 +68,19 @@
       </div>
       
     </div>
+
+        <!-- Modal -->
+    <div id="resultModal" class="modal">
+      <div class="modal-content">
+        <span id="closeModalBtn" class="close">&times;</span>
+        <h2 id="modalMessage"></h2>
+        <div id="modalButtonContainer"></div>
+      </div>
+    </div>
+
   </div>
 
-  <footer class="final">
+  <footer class="fixarRodape">
       
     <div class="container my-4">
       <div class="row mx-auto ">
@@ -93,6 +103,7 @@
     </div>
 
 </footer>
+
 
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
