modifiquei a nav inicial das paginas

--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -64,6 +64,8 @@
 
                             <a href="TelaLogin.html"><button type="submit" class="fs-3 mb-5 btn btn-primary w-100">Cadastrar</button>
                             </a>
+
+                            <a href="index.html"><h3 class="text-center">voltar</h3></a>
                         </form>
                     </div>
                 
