--- a/telaJogo2.html
+++ b/telaJogo2.html
@@ -47,7 +47,7 @@
   <div class="container py-5 text-center">
     
     <div id="game-container" class=" border p-4 rounded" style="background-color: #69A5DB;">
-      <h3 id="question" class="container bg-light col-8 mb-4 rounded-5"></h3>
+      <h3 id="question" class="container col-12 mb-4 rounded-5"></h3>
       <div id="options" class="row">
         <div class="mb-3"><img class="col-12" src="./assets/game2.png" alt=""></div>
         <div class="col-md-6 mb-3">
