--- a/telaJogo.html
+++ b/telaJogo.html
@@ -47,9 +47,9 @@
   <div class="container py-5 text-center">
     
     <div id="game-container" class=" border p-4 rounded" style="background-color: #69A5DB;">
-      <h3 id="question" class="mb-4 container bg-light rounded-3"></h3>
+      <h3 id="question" class="mb-4 col-12 container rounded-3"></h3>
       <div id="options" class="row">
-        <div class="mb-3"><img src="./assets/game1.png" alt=""></div>
+        <div class="mb-3"><img class="col-12" src="./assets/game1.png" alt=""></div>
         <div class="col-md-6 mb-3">
           <button class="btn btn-primary btn-block w-100 option" onclick="checkAnswer(0)">Opção A</button>
         </div>
