--- a/menu.html
+++ b/menu.html
@@ -62,10 +62,10 @@
                   <a class="nav-link fs-2 fw-bold" href="Tela_Fase_Iniciante.html"><img src="assets/cerebro.png" alt=""> Módulo 1 - Lógica de Programação</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fs-2 fw-bold" href="#"><img src="assets/logos_python.png" alt=""> Módulo 2 - Python</a>
+                  <a class="nav-link fs-2 fw-bold" href="manutencao.html"><img src="assets/logos_python.png" alt=""> Módulo 2 - Python</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fs-2 fw-bold" href="#"><img src="assets/logos_html-5.png" alt=""> Módulo 3 - HTML</a>
+                  <a class="nav-link fs-2 fw-bold" href="manutencao.html"><img src="assets/logos_html-5.png" alt=""> Módulo 3 - HTML</a>
                 </li>
   
               </ul>
