--- a/telaJogo.html
+++ b/telaJogo.html
@@ -68,7 +68,8 @@
 
         <!-- Modal -->
     <div id="resultModal" class="modal">
-      <div class="modal-content">
+      <div class="modal-content"style="width:90%;">
+        <div class="modal-content" >
         <span id="closeModalBtn" class="close">&times;</span>
         <h2 id="modalMessage"></h2>
         <div id="modalButtonContainer"></div>
