--- a/telaJogo6.html
+++ b/telaJogo6.html
@@ -71,7 +71,7 @@
         
             <!-- Modal -->
             <div id="resultModal" class="modal">
-              <div class="modal-content">
+              <div class="modal-content"style="width:90%;">
                 <span id="closeModalBtn" class="close">&times;</span>
                 <h2 id="modalMessage"></h2>
                 <div id="modalButtonContainer"></div>
